Add fonts and configure stylesheets

--- a/app/frontend/stylesheets/pallette.scss
+++ b/app/frontend/stylesheets/pallette.scss
@@ -1,15 +1,15 @@
 $white: #ffffff;
 
 $theme-colors: (
-  "light":      #dcdfe1,
-  "dark":       #181b1e,
-  "primary":    #2b78eb,
-  "secondary":  #238af4,
-  "info":       #30b1b0,
-  "accent1":    #2852af,
-  "accent2":    #3579cc,
-  "accent3":    #a8b8ca,
-  "success":    #11b367,
-  "warning":    #e7cf10,
-  "danger":     #f81906,
+    "light":      #f3f4f7,
+    "dark":       #372a2b,
+    "primary":    #0636ff,
+    "secondary":  #f91c6f,
+    "info":       #3992fd,
+    "accent1":    #0f18ae,
+    "accent2":    #8b4ab1,
+    "accent3":    #fad0ed,
+    "success":    #00aa63,
+    "warning":    #e3cd00,
+    "danger":     #f31d00,
 );
