--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,7 +2,7 @@ doctype html
 html
   head
     title
-      = content_for(:title) || "Book Hoard"
+      = t('title')
     meta[name="viewport" content="width=device-width,initial-scale=1"]
     meta[name="apple-mobile-web-app-capable" content="yes"]
     meta[name="mobile-web-app-capable" content="yes"]
@@ -15,4 +15,6 @@ html
     = vite_client_tag
     = vite_javascript_tag 'application'
   body
-    = yield
+    main
+      = render 'navigation/header'
+      = yield
