Add initial navbar implementation

--- a/app/frontend/stylesheets/application.scss
+++ b/app/frontend/stylesheets/application.scss
@@ -1,5 +1,7 @@
 @import "pallette";
-@import "typeography";
+@import "typography";
 @import "bootstrap";
 $bootstrap-icons-font-dir: "bootstrap-icons/font/fonts";
 @import "bootstrap-icons/font/bootstrap-icons";
+
+@import "custom";
