Add header element and custom styles

--- a/app/frontend/stylesheets/custom/_navbar.scss
+++ b/app/frontend/stylesheets/custom/_navbar.scss
@@ -1,9 +1,10 @@
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
-  .navbar {
+  .navbar, .navbar-brand {
     min-height: 64px;
   }
   .navbar-brand {
     font-size: 24px !important;
+    width: 320px;
   }
 }
