--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -15,6 +15,9 @@ html
     = vite_client_tag
     = vite_javascript_tag 'application'
   body
-    main
-      = render 'navigation/header'
-      = yield
+    = render 'navigation/header'
+    .container-fluid
+      .row
+        = render 'navigation/sidebar'
+        main
+          = yield
