Add sidebar and styles

--- a/app/frontend/stylesheets/pallette.scss
+++ b/app/frontend/stylesheets/pallette.scss
@@ -1,15 +1,15 @@
 $white: #ffffff;
 
 $theme-colors: (
-    "light":      #f3f4f7,
-    "dark":       #372a2b,
-    "primary":    #0636ff,
-    "secondary":  #f91c6f,
-    "info":       #3992fd,
-    "accent1":    #0f18ae,
-    "accent2":    #8b4ab1,
-    "accent3":    #fad0ed,
-    "success":    #00aa63,
-    "warning":    #e3cd00,
-    "danger":     #f31d00,
+    "light":      #d5d9e0,
+    "dark":       #0b0a0a,
+    "primary":    #323847,
+    "secondary":  #3c689a,
+    "info":       #6097c2,
+    "accent1":    #254f7d,
+    "accent2":    #6b6cc5,
+    "accent3":    #9cadb5,
+    "success":    #26a160,
+    "warning":    #e2ca26,
+    "danger":     #ef1e14,
 );
