--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -19,5 +19,5 @@ html
     .container-fluid
       .row
         = render 'navigation/sidebar'
-        main
+        main.col-md-9.ms-sm-auto.col-lg-10
           = yield
