--- a/app/views/navigation/_sidebar.html.slim
+++ b/app/views/navigation/_sidebar.html.slim
@@ -2,10 +2,9 @@ nav.col-md-3.col-lg-2.p-0.bg-accent1
   .offcanvas-body.d-md-flex.flex-column.p-0.pt-lg-3.overflow-y-auto
     ul.nav.flex-column
       li.nav-item
-        a.nav-link.text-white.d-flex.align-items-center.gap-2[href="#{root_path}"]
+        = link_to new_entry_path, class: 'nav-link text-white d-flex align-items-center gap-2' do
           i.bi.bi-file-earmark-plus
-          span
-            = t('global.new_record', record_name: 'entry')
+          span = t('new_entry')
       li.nav-item
         a.nav-link.text-white.d-flex.align-items-center.gap-2[href="#{root_path}"]
           i.bi.bi-person-add
